# pyscf

./: .codecov.yml  .coveragerc  .flake8  .flake8.orig  .flake8rc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .ruff.toml  .style.yapf  .travis.yml  AI_POLICY.md  AUTHORS  CHANGELOG  CHANGELOG.orig  CONTRIBUTING.md  FEATURES  LICENSE  MANIFEST.in  NOTICE  NOTICE.orig  README.md  README.md.orig  TODO  __init__.py  _setup.py  demo_vdzp.py  install.py  pyproject.toml  pyscf.nao.tddft_iter.py  pytest.ini  setup.cfg  setup.py  sun.repo
lib/: CMakeLists.txt  __init__.py  _runme_to_fix_dylib_osx10.11.sh  _runme_to_remove_rpath.sh  chkfile.py  config.h.in  diis.py  linalg_helper.py  logger.py  misc.py  numpy_helper.py  parameters.py
lib/ao2mo/: CMakeLists.txt  _ao2mo.c  _ao2mo.pyx  ao2mo_helper.c  ci_misc_helper.c  int2e_ao2mo.h  int2e_sph_o3.c  int2e_sph_o4.c  misc.c  misc.h  nr_ao2mo.c  nr_ao2mo.h  nr_ao2mo_O3.c  nr_ao2mo_O3.h  nr_ao2mo_o3.c  nr_ao2mo_o3.h  nr_ao2mo_o4.c  nr_ao2mo_o4.h  nr_incore.c  nr_outcore.c  nr_outcore.h  r_ao2mo.c  restore_eri.c
lib/ao2mo/test/: test_ao2mo.py
lib/cc/: CMakeLists.txt  ccsd_grad.c  ccsd_mo2ao.c  ccsd_pack.c  ccsd_t.c
lib/dft/: CMakeLists.txt  CxLebedevGrid.c  CxLebedevGrid.cpp  CxLebedevGrid.h  _dft.c  _dft.pyx  deriv.c  fastexp.c  grid_basis.c  grid_basis.h  grid_basis_o1.c  libxc_itrf.c  nr_numint.c  nr_numint_o1.c  r_numint.c  vxc.h  xcfun_itrf.c
lib/extras/mbd/: dipole.c
lib/gto/: CMakeLists.txt  deriv1.c  deriv2.c  fill_int2c.c  fill_int2e.c  fill_nr_3c.c  ft_ao.c  grid_ao_drv.c  grid_ao_drv.h  moleintor.c  nr_ecp.c  pbcint1e.c
lib/gto/autocode/: auto_eval.cl  auto_eval1.c  derivator.cl  gen-code.cl  parser.cl  utility.cl
lib/gto/test/: test_ecp.py  test_gridao.py  test_int1e_pbc.py
lib/hci/: CMakeLists.txt  hci.c  hci.h
lib/icmpspt/: CMakeLists.txt  icmpspt.c  icmpspt.cpp
lib/localizer/: hessian.c
lib/mcscf/: CMakeLists.txt  _mcscf.c  _mcscf.pyx  fci.h  fci_4pdm.c  fci_contract.c  fci_contract_nosym.c  fci_rdm.c  fci_spin.c  fci_string.c  fci_string.h  mc_eri.c  nevpt_contract.c  select_ci.c
lib/nao/: CMakeLists.txt  Makefile  arch.inc.gfortran  m_ao_eval.F90  m_apair_put.F90  m_apair_size.F90  m_biloc_aux.F90  m_bilocal_vertex.F90  m_bulk_uc_vecs.F90  m_color.F90  m_comp_vrtx_cc.F90  m_csr_bloch_mat.F90  m_dens_libnao.F90  m_dft_wf4.F90  m_dft_wf8.F90  m_dm_libnao.F90  m_dp_aux.F90  m_functs_l_mult_type.F90  m_gen_get_vrtx_cc_apair.F90  m_gen_get_vrtx_cc_apairs.F90  m_get_sizeof.F90  m_harmonics.F90  m_hsx.F90  m_init_pair_info.F90  m_input.F90  m_interp_coeffs.F90  m_iter_gpu_routines.cu  m_make_vrtx_cc.F90  m_orb_rspace_type.F90  m_pair_info.F90  m_parallel.F90  m_pb_c2nf.F90  m_pb_coul_11.F90  m_pb_coul_12.F90  m_pb_coul_aux.F90  m_pb_coul_pack8.F90  m_prod_basis_list.F90  m_prod_basis_param.F90  m_prod_basis_type.F90  m_prod_talman.F90  (+22 more)
lib/nao/test/: test_siesta.py
lib/np_helper/: CMakeLists.txt  condense.c  contract.c  np_helper.h  npdot.c  pack_tril.c  transpose.c
lib/pbc/: CMakeLists.txt  fill_ints.c  ft_ao.c  grid_ao.c
lib/pbc/test/: test_pbc_fill_int.py
lib/pycint/: CMakeLists.txt  cint_const_mod.F90  cint_interface.F90  dkb_vhf.F90  dkb_vhf_coul.c  dkb_vhf_coul_O00.F90  dkb_vhf_coul_O01.F90  dkb_vhf_coul_O02.F90  hf_block_mod.F90  misc.c  nr_vhf.F90  nr_vhf_O00.F90  nr_vhf_coul.c  nr_vhf_grad_O00.F90  nr_vhf_has_hs.F90  nr_vhf_hs_hs.F90  nr_vhf_igiao.F90  nr_vhf_igiao_O00.F90  pycint.c  pycint_reg.c  r_vhf_tas_ts.F90  r_vhf_ts_ts.F90  rkb_giao_vhf.F90  rkb_giao_vhf_O00.F90  rkb_vhf.c  rkb_vhf_coul.F90  rkb_vhf_coul_O00.F90  rkb_vhf_coul_grad_O00.F90  rkb_vhf_gaunt.F90  rkb_vhf_gaunt_O00.F90  rmb_vhf.F90  rmb_vhf_O00.F90  swig_numpy.c  swig_numpy.h  vhf_drv.c  vhf_drv.h
lib/ri/: CMakeLists.txt  nr_2c2e.c  nr_3c2e.c  nr_df_incore.c  nr_df_incore_o0.c  r_df_incore.c
lib/ri/test/: test_df.py
lib/siesta/: Makefile  m_define_macro.F90  m_siesta_hsx.F90  siesta.F90
lib/siesta/test/: test_siesta.py
lib/test/: test_linalg_helper.py
lib/vhf/: CMakeLists.txt  _vhf.c  _vhf.pyx  breit.c  cart2sph.h  cint3c1e.c  cint_bas.h  cint_const.h  cint_optimizer.h  cvhf.h  fblas.h  fill_nr_s8.c  g1e.h  g3c1e.c  int2e_sph.c  int2e_sph_o3.c  int2e_sph_o4.c  int2e_sph_o5.c  misc.c  misc.h  moleintor.c  nr_direct.c  nr_direct.h  nr_direct_dot.c  nr_direct_o1.c  nr_ecp.c  nr_incore.c  nr_incore_o0.c  nr_vhf_direct.c  nr_vhf_direct.h  nr_vhf_incore.c  nr_vhf_incore.h  optimizer.c  optimizer.h  r_direct_dot.c  r_direct_dot.h  r_direct_o1.c  rah_direct_dot.c  rha_direct_dot.c  rkb_screen.c  (+2 more)
lib/vhf/test/: test_3c1e.py  test_ecp.py  test_nr_direct.py  test_nr_direct_dot.py  test_nrdirect.py
pyscf/lib/: CMakeLists.txt  CMakeLists.txt.bak  __init__.py  _runme_to_fix_dylib_osx10.11.sh  _runme_to_remove_rpath.sh  chkfile.py  cmake.arch.inc  config.h.in  dftd3.py  dftd4.py  diis.py  exceptions.py  libcint.patch  libqcschema.py  libxcfun.patch  linalg_helper.py  logger.py  misc.py  numpy_helper.py  parameters.py  scipy_helper.py  tblis_einsum.py
pyscf/lib/agf2/: CMakeLists.txt  ragf2.c  ragf2.h  uagf2.c
pyscf/lib/ao2mo/: CMakeLists.txt  nr_ao2mo.c  nr_ao2mo.h  nr_incore.c  nr_incore.h  nrr_ao2mo.c  r_ao2mo.c  r_ao2mo.h  restore_eri.c
pyscf/lib/cc/: CMakeLists.txt  ccsd_grad.c  ccsd_pack.c  ccsd_t.c  ccsd_t_emb.c  ccsd_t_lambda.c  uccsd_t.c
pyscf/lib/ccsdt/: CMakeLists.txt  rccsdt.c  rccsdtq.c  uccsdt.c
pyscf/lib/cmake/: FindFFTW.cmake
pyscf/lib/cmake_arch_config/: CMakeLists.txt.anaconda2.mkl  CMakeLists.txt.default  CMakeLists.txt.gnu.mkl  CMakeLists.txt.ifort.mkl  cmake.arch.inc-gnu  cmake.arch.inc-gnu-gpu  cmake.arch.inc-gnu.mkl  cmake.arch.inc-intelpython-gfortran  cmake.arch.inc-intelpython-ifort  cmake.arch.inc-nao-gnu  cmake.arch.inc-oberon.anaconda.ifort.mkl  cmake.arch.inc-singularity.anaconda.gnu.mkl  cmake.arch.inc.intelpython.mkl.omp.gnu.seq  compile-atlas.sh
pyscf/lib/cmake_user_inc_examples/: cmake.user.inc-gnu-gpu  cmake.user.inc-gnu-mkl  cmake.user.inc-oberon.anaconda.gnu.mkl  cmake.user.inc-pgi-gpu  cmake.user.inc-singularity.anaconda.gnu.mkl
pyscf/lib/dft/: CMakeLists.txt  hfx.c  (+21 more)
(+5001 files in other folders)
